--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -13,6 +13,10 @@
   display: flex;
 }
 
+.loginLeft {
+  margin-right: 1rem;
+}
+
 .loginLeft,
 .loginRight {
   flex: 1;
@@ -63,6 +67,14 @@
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.loginButton:focus {
+  outline: none;
+}
+
+.loginButton:disabled {
+  cursor: not-allowed;
 }
 
 .loginForgot {
