--- a/client/src/components/messenger/messenger.css
+++ b/client/src/components/messenger/messenger.css
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 .chatBoxTop {
@@ -63,4 +64,12 @@
   padding: 10px;
   /* background-color: aqua; */
   height: calc(100vh - 70px);
+}
+
+.noConversationText {
+  position: absolute;
+  top: 10%;
+  font-size: 50px;
+  color: rgb(224, 220, 220);
+  cursor: default;
 }
