Added links to homepage, timeline and messeges. Also displayed online users in homepage

--- a/client/src/components/online/online.css
+++ b/client/src/components/online/online.css
@@ -1,3 +1,9 @@
+.rightbarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
 .rightbarProfileImgContainer {
   margin-right: 10px;
   position: relative;
