--- a/client/src/components/rightbar/rightbar.css
+++ b/client/src/components/rightbar/rightbar.css
@@ -104,3 +104,11 @@
 .rightbarFollowButton:focus {
   outline: none;
 }
+
+.rightbarLogOut {
+  cursor: pointer;
+  width: fit-content;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: lightgray;
+}
